# Rec2Note

./: .env.example  .gitignore  AGENTS.md  Lecture7_sample_note.md  README.md  pyproject.toml
app/: config.py
src/rec2note_cli/: config.py  main.py  streamlit_app.py
src/rec2note_cli/cli/: process.py
src/rec2note_cli/core/: agents.py  db.py  llm.py  llm_models.py  models.py  pipeline.py  pipeline_models.py
src/rec2note_cli/enums/: agent_enums.py
src/rec2note_cli/prompts/: deadline.md  deadline_instructions.md  questions.md  questions_instructions.md  shared_system_instructions.md  student_qa.md  student_qa_instructions.md  summary_instructions.md  visual_aids_search_instructions.md
src/rec2note_cli/ui/: __init__.py  console.py  display.py
src/rec2note_cli/utils/: markdown_builder.py  read_file.py  timestamp.py
tests/: test_llm.py  test_markdown_builder.py
